--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -7,4 +7,4 @@ AP_LOG_PRETTY=true
 AP_QUEUE_MODE=MEMORY
 AP_TELEMETRY_ENABLED=false
 AP_TRIGGER_DEFAULT_POLL_INTERVAL=1
-AP_WEBHOOK_URL="http://localhost:3000"
+AP_WEBHOOK_URL="https://opulent-tribble-w594j977574h9v46-3000.preview.app.github.dev"
